@@ -300,6 +300,7 @@ libc {
     epoll_pwait2;
   }
   GLIBC_2.36 {
+    fsopen;
     pidfd_open;
     pidfd_getfd;
     pidfd_send_signal;
